--- a/addressbook/src/main/resources/application.properties
+++ b/addressbook/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=addressbook
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
+spring.datasource.username=root
+spring.datasource.password=Madhu*1711
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Server Port (optional)
 server.port=8080
-spring.datasource.url=jdbc:h2:mem:addressbookdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
