--- a/addressbook/src/main/resources/application.properties
+++ b/addressbook/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# Application Name
 spring.application.name=addressbook
+
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
 spring.datasource.username=root
@@ -12,3 +14,24 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server Port (optional)
 server.port=8080
+
+# Logging Configuration
+
+# Root log level
+logging.level.root=INFO
+
+# Package-specific log level (more detailed logging)
+logging.level.com.bridgeLabz.addressbook=DEBUG
+
+# Log output file (logs directory must exist or be created by your app)
+logging.file.name=logs/addressbook-app.log
+
+# Console logging pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# File logging pattern
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Optional: Limit log file size and number of archived files (rolling)
+logging.file.max-size=10MB
+logging.file.max-history=30
