--- a/addressbook/src/main/resources/application.properties
+++ b/addressbook/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-spring.application.name=addressbook
-# MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
-spring.datasource.username=root
-spring.datasource.password=Madhu*1711
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# Server Port (optional)
-server.port=8080
+spring.profiles.active=dev
