--- a/addressbook/src/main/resources/application.properties
+++ b/addressbook/src/main/resources/application.properties
@@ -1,37 +1,16 @@
-# Application Name
-spring.application.name=addressbook
-
-# MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
-spring.datasource.username=root
-spring.datasource.password=Madhu*1711
+# MySQL datasource config
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=addressbook_user
+spring.datasource.password=madhu*1711
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Server Port (optional)
+# Connection pool settings (optional)
+spring.datasource.hikari.maximum-pool-size=10
+
+# Other Spring Boot properties
 server.port=8080
-
-# Logging Configuration
-
-# Root log level
-logging.level.root=INFO
-
-# Package-specific log level (more detailed logging)
-logging.level.com.bridgeLabz.addressbook=DEBUG
-
-# Log output file (logs directory must exist or be created by your app)
-logging.file.name=logs/addressbook-app.log
-
-# Console logging pattern
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-
-# File logging pattern
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
-# Optional: Limit log file size and number of archived files (rolling)
-logging.file.max-size=10MB
-logging.file.max-history=30
