--- a/addressbook/src/main/resources/application.properties
+++ b/addressbook/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.profiles.active=dev
-
 # MySQL datasource config
 spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=addressbook_user
@@ -17,3 +15,5 @@ spring.datasource.hikari.maximum-pool-size=10
 # Other Spring Boot properties
 server.port=8080
 
+# Show detailed errors in response body (helps with validation errors)
+server.error.include-message=always
